k8s/apps/devops-app/base/shared/validating-admission-policies/bindings/required-env-label-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: required-env-label
spec:
  policyName: required-env-label
  validationActions: [Deny]
  matchResources:
    namespaceSelector: # does not filter cluster scoped resources
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - devops-app
